[package]
name = "route96"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "route96"
path = "src/bin/main.rs"

[lib]
name = "route96"

[features]
default = ["media-compression", "sqlx-postgres"]
media-compression = [
    "dep:ffmpeg-the-third",
    "dep:infer",
    "dep:image",
    "dep:rgb",
    "dep:half",
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
]
labels = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers"]
torrent-v2 = []
react-ui = []
dev = []
void-cat-redirects = []

[dependencies]
log = "0.4.27"
pretty_env_logger = "0.5.0"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
bytes = "1"
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
anyhow = "^1.0.97"
sha2 = "0.10.8"
bs58 = "0.5.0"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono", "uuid", "tls-rustls"] }
config = { version = "0.15.11", features = ["yaml"] }
chrono = { version = "0.4.40", features = ["serde"] }
serde_with = { version = "3.12.0", features = ["hex"] }
reqwest = { version = "0.12.15", features = ["stream"] }
clap = { version = "4.5.35", features = ["derive"] }
mime2ext = "0.1.54"
infer = { version = "0.19.0", optional = true }
tokio-util = { version = "0.7.14", features = ["io", "io-util"] }
nostr-sdk = { version = "0.40.0", features = ["all-nips"] }

libc = { version = "0.2.171", optional = true }
ffmpeg-the-third = { version = "3.0.1+ffmpeg-7.1", optional = true }
candle-core = { git = "https://github.com/huggingface/candle.git", tag = "0.8.4", optional = true }
candle-nn = { git = "https://github.com/huggingface/candle.git", tag = "0.8.4", optional = true }
candle-transformers = { git = "https://github.com/huggingface/candle.git", tag = "0.8.4", optional = true }
sqlx-postgres = { version = "0.8.3", optional = true, features = ["chrono", "uuid"] }
http-range-header = { version = "0.4.2" }
async-trait = "0.1.80"

futures = "0.3"

# AWS SDK Dependencies for S3/Spaces
aws-config = { version = "1.1.8" }
aws-sdk-s3 = { version = "1.19.0" }
http-body-0-4 = { version = "1.0.0", package = "http-body" }

serde_json = "1.0.117"
image = { version = "0.25.1", optional = true }
rgb = { version = "0.8.38", optional = true }
half = { version = "2.6.0", features = ["serde"], optional = true }
async-compression = { version = "0.4", features = ["gzip", "tokio", "brotli", "zstd", "deflate"] }
